Added occupied stands list to viewer

--- a/viewer/viewer.html
+++ b/viewer/viewer.html
@@ -33,7 +33,8 @@
 
       <section id="status">
         <h2>Status</h2>
-        <p>Welcome to the status section!</p>
+        <h23>Occupied Stands</h3>
+        <ul id="occupiedStands"></ul>
       </section>
       <section id="standMap">
         <h2>Stand Map</h2>
