--- a/viewer/viewer.html
+++ b/viewer/viewer.html
@@ -5,7 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ramp Agent API</title>
     <link rel="icon" href="favicon.svg">
+
+    <!-- Leaflet CSS (needed for controls/legend positioning) -->
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
+
     <link rel="stylesheet" href="styles.css" />
+    <!-- Leaflet JS before your script, both deferred so order is preserved -->
+    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" defer></script>
     <script src="script.js" defer></script>
 
     <!-- Boxicons -->
@@ -43,7 +49,7 @@
       </section>
       <section id="standMap" data-page="standMap">
         <h2>Stand Map</h2>
-        <p>This is the stand map section.</p>
+        <div id="map"></div>
       </section>
       <section id="log" data-page="log">
         <h2>Log</h2>
@@ -60,4 +66,3 @@
     </footer>
   </body>
 </html>
-  
