Added stand label

--- a/viewer/viewer.html
+++ b/viewer/viewer.html
@@ -28,8 +28,7 @@
     <main>
       <div id="mySidenav" class="sidenav">
         <div class="sidenav-content">
-          <i href="javascript:void(0)" class="closebtn bx bx-menu" onclick="closeNav()"
-            ></i>
+          <i class="closebtn bx bx-menu" onclick="closeNav()"></i>
             <a href="#status" onclick="closeNav()">Status</a>
             <a href="#statistics" onclick="closeNav()">Statistics</a>
             <a href="#standMap" onclick="closeNav()">Map</a>
