--- a/viewer/viewer.html
+++ b/viewer/viewer.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="styles.css" />
     <!-- Leaflet JS before your script, both deferred so order is preserved -->
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@4/dist/chart.umd.min.js"></script>
     <script src="script.js" defer></script>
 
     <!-- Boxicons -->
@@ -44,7 +45,16 @@
       </section>
       <section id="statistics" data-page="statistics">
         <h2>Statistics</h2>
-        <h3>Number of request handled: <b>13 899</b> since last 24 hours</h3>
+        <h3>Reports per hour (last 24h)</h3>
+        <div style="display:flex;align-items:center;gap:1rem">
+          <div style="flex:1;min-height:200px">
+            <canvas id="reportsChart"></canvas>
+          </div>
+          <div style="width:120px">
+            <div>Total</div>
+            <div id="StatTotal">0</div>
+          </div>
+        </div>
       </section>
       <section id="standMap" data-page="standMap">
         <h2>Stand Map</h2>
