--- a/viewer/viewer.html
+++ b/viewer/viewer.html
@@ -53,7 +53,7 @@
         <h2>Statistics</h2>
         <div class="container">
           <div class="subContainer reports-chart-wrap">
-            <h3>Reports per hour (last 24h): Total: <span id="StatTotal">0</span> Requests</h3>
+            <h3>Reports per hour (last 24h): <span id="RequestTotal">0</span> Requests, <span id="ReportTotal">0</span> Reports</h3>
             <canvas id="reportsChart"></canvas>
           </div>
         </div>
