--- a/viewer/viewer.html
+++ b/viewer/viewer.html
@@ -52,8 +52,8 @@
       <section id="statistics" data-page="statistics">
         <h2>Statistics</h2>
         <div class="container">
-          <div class="subContainer reports-chart-wrap">
-            <h3>Reports per hour (last 24h): <span id="RequestTotal">0</span> Requests, <span id="ReportTotal">0</span> Reports</h3>
+          <div class="reports-chart-wrap subContainer">
+            <h3>Reports per hour (last 24h): <span id="ReportTotal">0</span> Reports, <span id="RequestTotal">0</span> Requests</h3>
             <canvas id="reportsChart"></canvas>
           </div>
         </div>
@@ -63,7 +63,7 @@
         <div id="map"></div>
       </section>
       <section id="log" data-page="log">
-        <h2>Log</h2>
+        <h2>Logs</h2>
         <div class="log-controls">
           <button id="toggleAutoScroll" onclick="toggleAutoScroll()">Auto-scroll: ON</button>
         </div>
