Added dark mode

--- a/viewer/viewer.html
+++ b/viewer/viewer.html
@@ -24,6 +24,8 @@
     <header>
       <i class="bx bx-menu" onclick="openNav()"></i>
       <h1>Ramp Agent API</h1>
+      <i id="darkModeMoon" class="bx bxs-moon" onclick="toggleDarkMode()"></i>
+      <i id="darkModeSun" class="bx bxs-sun" onclick="toggleDarkMode()"></i>
     </header>
     <main>
       <div id="mySidenav" class="sidenav">
