--- a/viewer/viewer.html
+++ b/viewer/viewer.html
@@ -35,6 +35,7 @@
             <a href="#statistics" onclick="closeNav()">Statistics</a>
             <a href="#standMap" onclick="closeNav()">Map</a>
             <a href="#log" onclick="closeNav()">Logs</a>
+            <a href="#configs" onclick="closeNav()">Configs</a>
           <p class="version">Version 1.0.0</p>
         </div>
       </div>
@@ -58,6 +59,12 @@
             <h3>Reports per hour (last 24h): <span id="ReportTotal">0</span> Reports, <span id="RequestTotal">0</span> Requests</h3>
             <canvas id="reportsChart"></canvas>
           </div>
+          <div class="per-airport-chart-wrap subContainer">
+            <h3>Occupied Stands per airport (last 24h):</h3>
+          </div>
+          <div class="time-chart-wrap subContainer">
+            <h3>Time chart whatever:</h3>
+          </div>
         </div>
       </section>
       <section id="standMap" data-page="standMap">
@@ -71,6 +78,16 @@
         </div>
         <div id="logContainer" class="log-container">
           <div id="logContent"></div>
+        </div>
+      </section>
+      <section id="configs" data-page="configs">
+        <h2>Configs</h2>
+        <div id="configButtonContainer">
+        </div>
+        <div id="configContainer">
+          <div id="configContent">
+            <pre><code id="configCode"></code></pre>
+          </div>
         </div>
       </section>
     </main>
