Added placeholder pie chart

--- a/viewer/viewer.html
+++ b/viewer/viewer.html
@@ -61,6 +61,7 @@
           </div>
           <div class="per-airport-chart-wrap subContainer">
             <h3>Occupied Stands per airport (last 24h):</h3>
+            <canvas id="airportChart"></canvas>
           </div>
           <div class="time-chart-wrap subContainer">
             <h3>Time chart whatever:</h3>
