--- a/viewer/viewer.html
+++ b/viewer/viewer.html
@@ -1,99 +1,144 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ramp Agent API</title>
 
-    <!-- Leaflet CSS (needed for controls/legend positioning) -->
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Ramp Agent API</title>
 
-    <link rel="stylesheet" href="styles.css" />
-    <!-- Leaflet JS before your script, both deferred so order is preserved -->
-    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" defer></script>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js@4/dist/chart.umd.min.js"></script>
-    <script src="script.js" defer></script>
+  <!-- Leaflet CSS (needed for controls/legend positioning) -->
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
 
-    <!-- Boxicons -->
-    <link
-      href="https://cdn.boxicons.com/fonts/basic/boxicons.min.css"
-      rel="stylesheet"
-    />
-  </head>
-  <body>
-    <header>
-      <i class="bx bx-menu" onclick="openNav()"></i>
-      <h1>Ramp Agent API</h1>
-      <i id="darkModeMoon" class="bx bxs-moon" onclick="toggleDarkMode()"></i>
-      <i id="darkModeSun" class="bx bxs-sun" onclick="toggleDarkMode()"></i>
-    </header>
-    <main>
-      <div id="mySidenav" class="sidenav">
-        <div class="sidenav-content">
-          <i class="closebtn bx bx-menu" onclick="closeNav()"></i>
-            <a href="#status" onclick="closeNav()">Status</a>
-            <a href="#statistics" onclick="closeNav()">Statistics</a>
-            <a href="#standMap" onclick="closeNav()">Map</a>
-            <a href="#log" onclick="closeNav()">Logs</a>
-            <a href="#configs" onclick="closeNav()">Configs</a>
-          <p class="version">Version 1.0.0</p>
+  <link rel="stylesheet" href="styles.css" />
+  <!-- Leaflet JS before your script, both deferred so order is preserved -->
+  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" defer></script>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js@4/dist/chart.umd.min.js"></script>
+  <script src="script.js" defer></script>
+
+  <!-- Boxicons -->
+  <link href="https://cdn.boxicons.com/fonts/basic/boxicons.min.css" rel="stylesheet" />
+</head>
+
+<body>
+  <header>
+    <i class="bx bx-menu" onclick="openNav()"></i>
+    <h1>Ramp Agent API</h1>
+    <i id="darkModeMoon" class="bx bxs-moon" onclick="toggleDarkMode()"></i>
+    <i id="darkModeSun" class="bx bxs-sun" onclick="toggleDarkMode()"></i>
+  </header>
+  <main>
+    <div id="mySidenav" class="sidenav">
+      <div class="sidenav-content">
+        <i class="closebtn bx bx-menu" onclick="closeNav()"></i>
+        <a href="#status" onclick="closeNav()">Status</a>
+        <a href="#statistics" onclick="closeNav()">Statistics</a>
+        <a href="#standMap" onclick="closeNav()">Map</a>
+        <a href="#log" onclick="closeNav()">Logs</a>
+        <a href="#configs" onclick="closeNav()">Configs</a>
+        <p class="version">Version 1.0.0</p>
+      </div>
+    </div>
+    <section id="status" data-page="status">
+      <h2>Status</h2>
+      <div class="status-container container">
+        <div class="subContainer">
+          <h3>Occupied Stands:</h3>
+          <ul id="occupiedStands"></ul>
+        </div>
+        <div class="subContainer">
+          <h3>Blocked Stands:</h3>
+          <ul id="blockedStands"></ul>
+        </div>
+        <div class="subContainer">
+          <h3>Blocked Stands:</h3>
+        </div>
+        <div class="subContainer">
+          <div class="departure-board">
+            <span class="letter letter-blank"></span>
+            <span class="letter letter-N"></span>
+            <span class="letter letter-E"></span>
+            <span class="letter letter-X"></span>
+            <span class="letter letter-T"></span>
+            <span class="letter letter-blank"></span>
+            <span class="letter letter-D"></span>
+            <span class="letter letter-E"></span>
+            <span class="letter letter-P"></span>
+            <span class="letter letter-A"></span>
+            <span class="letter letter-R"></span>
+            <span class="letter letter-T"></span>
+            <span class="letter letter-U"></span>
+            <span class="letter letter-R"></span>
+            <span class="letter letter-E"></span>
+            <span class="letter letter-S"></span>
+            <span class="letter letter-blank"></span>
+
+          </div>
+          <div class="departure-board">
+            <span class="letter letter-0"></span>
+            <span class="letter letter-8"></span>
+            <span class="letter letter-1"></span>
+            <span class="letter letter-5"></span>
+            <span class="letter letter-blank"></span>
+            <span class="letter letter-T"></span>
+            <span class="letter letter-O"></span>
+            <span class="letter letter-K"></span>
+            <span class="letter letter-Y"></span>
+            <span class="letter letter-O"></span>
+            <span class="letter letter-blank"></span>
+            <span class="letter letter-H"></span>
+            <span class="letter letter-A"></span>
+            <span class="letter letter-N"></span>
+            <span class="letter letter-E"></span>
+            <span class="letter letter-D"></span>
+            <span class="letter letter-A"></span>
+          </div>
         </div>
       </div>
-      <section id="status" data-page="status">
-        <h2>Status</h2>
-        <div class="container">
-          <div class="subContainer">
-            <h3>Occupied Stands:</h3>
-            <ul id="occupiedStands"></ul>
-          </div>
-          <div class="subContainer">
-            <h3>Blocked Stands:</h3>
-            <ul id="blockedStands"></ul>
-          </div>
+    </section>
+    <section id="statistics" data-page="statistics">
+      <h2>Statistics</h2>
+      <div class="container">
+        <div class="reports-chart-wrap subContainer">
+          <h3>Reports per hour (last 24h): <span id="ReportTotal">0</span> Reports, <span id="RequestTotal">0</span>
+            Requests</h3>
+          <canvas id="reportsChart"></canvas>
         </div>
-      </section>
-      <section id="statistics" data-page="statistics">
-        <h2>Statistics</h2>
-        <div class="container">
-          <div class="reports-chart-wrap subContainer">
-            <h3>Reports per hour (last 24h): <span id="ReportTotal">0</span> Reports, <span id="RequestTotal">0</span> Requests</h3>
-            <canvas id="reportsChart"></canvas>
-          </div>
-          <div class="per-airport-chart-wrap subContainer">
-            <h3>Occupied Stands per airport (last 24h):</h3>
-            <canvas id="airportChart"></canvas>
-          </div>
-          <div class="time-chart-wrap subContainer">
-            <h3>Time chart whatever:</h3>
-          </div>
+        <div class="per-airport-chart-wrap subContainer">
+          <h3>Occupied Stands per airport (last 24h):</h3>
+          <canvas id="airportChart"></canvas>
         </div>
-      </section>
-      <section id="standMap" data-page="standMap">
-        <h2>Stand Map</h2>
-        <div id="map"></div>
-      </section>
-      <section id="log" data-page="log">
-        <h2>Logs</h2>
-        <div class="log-controls">
-          <button id="toggleAutoScroll" onclick="toggleAutoScroll()">Auto-scroll: ON</button>
+        <div class="time-chart-wrap subContainer">
+          <h3>Time chart whatever:</h3>
         </div>
-        <div id="logContainer" class="log-container">
-          <div id="logContent"></div>
+      </div>
+    </section>
+    <section id="standMap" data-page="standMap">
+      <h2>Stand Map</h2>
+      <div id="map"></div>
+    </section>
+    <section id="log" data-page="log">
+      <h2>Logs</h2>
+      <div class="log-controls">
+        <button id="toggleAutoScroll" onclick="toggleAutoScroll()">Auto-scroll: ON</button>
+      </div>
+      <div id="logContainer" class="log-container">
+        <div id="logContent"></div>
+      </div>
+    </section>
+    <section id="configs" data-page="configs">
+      <h2>Configs</h2>
+      <div id="configButtonContainer">
+      </div>
+      <div id="configContainer">
+        <div id="configContent">
+          <pre><code id="configCode"></code></pre>
         </div>
-      </section>
-      <section id="configs" data-page="configs">
-        <h2>Configs</h2>
-        <div id="configButtonContainer">
-        </div>
-        <div id="configContainer">
-          <div id="configContent">
-            <pre><code id="configCode"></code></pre>
-          </div>
-        </div>
-      </section>
-    </main>
-    <footer>
-      <p>&copy; French vACC Gate Assigner.</p>
-    </footer>
-  </body>
+      </div>
+    </section>
+  </main>
+  <footer>
+    <p>&copy; French vACC Gate Assigner.</p>
+  </footer>
+</body>
+
 </html>
