Fixed status display

--- a/viewer/viewer.html
+++ b/viewer/viewer.html
@@ -40,7 +40,7 @@
     </div>
     <section id="status" data-page="status">
       <h2>Status</h2>
-      <div class="status-container container">
+      <div id="status-container" class="status-container container">
         <div class="subContainer">
           <h3>Occupied Stands:</h3>
           <ul id="occupiedStands"></ul>
