Fixed typo in charts

--- a/viewer/viewer.html
+++ b/viewer/viewer.html
@@ -52,7 +52,7 @@
           <canvas id="reportsChart"></canvas>
         </div>
         <div class="per-airport-chart-wrap subContainer">
-          <h3>Occupied Stands per airport (last 24h):</h3>
+          <h3>Occupied Stands per airport:</h3>
           <canvas id="airportChart"></canvas>
         </div>
         <div class="time-chart-wrap subContainer">
