--- a/viewer/viewer.html
+++ b/viewer/viewer.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Ramp Agent API</title>
+  <meta name="apple-mobile-web-app-capable" content="yes">
 
   <!-- Leaflet CSS (needed for controls/legend positioning) -->
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
@@ -11,7 +12,7 @@
   <link rel="stylesheet" href="styles.css" />
   <!-- Leaflet JS before your script, both deferred so order is preserved -->
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" defer></script>
-  <script src="https://cdn.jsdelivr.net/npm/chart.js@4/dist/chart.umd.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js@4/dist/chart.umd.min.js" defer></script>
   <script src="script.js" defer></script>
 
   <!-- Boxicons -->
