--- a/viewer/viewer.html
+++ b/viewer/viewer.html
@@ -38,7 +38,7 @@
         <a href="#standMap" onclick="closeNav()">Map</a>
         <a href="#log" onclick="closeNav()">Logs</a>
         <a href="#configs" onclick="closeNav()">Configs</a>
-        <p class="version">Version 1.0.3</p>
+        <p class="version">Version 1.0.4</p>
       </div>
     </div>
     <section id="status" data-page="status">
@@ -50,7 +50,7 @@
       <h2>Statistics</h2>
       <div class="container">
         <div class="reports-chart-wrap subContainer">
-          <h3>Reports per hour (last 24h): <span id="ReportTotal">0</span> Reports, <span id="RequestTotal">0</span>
+          <h3>Reports per hour (last 24h): <span id="ReportTotal">0</span> Reports | <span id="RequestTotal">0</span>
             Requests</h3>
           <canvas id="reportsChart"></canvas>
         </div>
