--- a/viewer/viewer.html
+++ b/viewer/viewer.html
@@ -155,7 +155,7 @@
                 </thead>
                 <tbody>
                   <!-- API key rows will be populated here -->
-                  <tr>
+                  <tr id="abcd-efgh-ijkl-mnop">
                     <td>123456</td>
                     <td class="apiValue">abcd-efgh-ijkl-mnop</td>
                     <td class="createdValue">2024-06-01</td>
@@ -169,16 +169,30 @@
                       </button>
                     </td>
                   </tr>
-                  <tr>
+                  <tr id="fkjp-2345-6789-qrst">
                     <td>123456</td>
-                    <td class="apiValue">abcd-efgh-ijkl-mnop</td>
+                    <td class="apiValue">fkjp-2345-6789-qrst</td>
                     <td class="createdValue">2024-06-01</td>
                     <td>2024-06-10</td>
                     <td class="actionCell">
-                      <button class="renewButton" onclick="renewApiKey('abcd-efgh-ijkl-mnop')">
+                      <button class="renewButton" onclick="renewApiKey('fkjp-2345-6789-qrst')">
                         Renew
                       </button>
-                      <button class="revokeButton" onclick="revokeApiKey('abcd-efgh-ijkl-mnop')">
+                      <button class="revokeButton" onclick="revokeApiKey('fkjp-2345-6789-qrst')">
+                        Revoke
+                      </button>
+                    </td>
+                  </tr>
+                  <tr id="ijkl-mnop-qrst-uvwx">
+                    <td>654321</td>
+                    <td class="apiValue">ijkl-mnop-qrst-uvwx</td>
+                    <td class="createdValue">2024-05-15</td>
+                    <td>2024-06-09</td>
+                    <td class="actionCell">
+                      <button class="renewButton" onclick="renewApiKey('ijkl-mnop-qrst-uvwx')">
+                        Renew
+                      </button>
+                      <button class="revokeButton" onclick="revokeApiKey('ijkl-mnop-qrst-uvwx')">
                         Revoke
                       </button>
                     </td>
