Login button now calls correct route

--- a/viewer/viewer.html
+++ b/viewer/viewer.html
@@ -129,7 +129,7 @@
       <section data-page="dashboard">
         <section id="dashboardUser">
           <div class="loginLayout">
-            <button id="loginButton">Login</button>
+            <button id="loginButton" onclick="window.location.href='/api/auth/login'">Login</button>
           </div>
           <div class="connectedLayout">
             <h2>Welcome, <span id="username">User</span>!</h2>
