Added logout button

--- a/viewer/viewer.html
+++ b/viewer/viewer.html
@@ -136,6 +136,7 @@
             <h3>Your API Key:</h3>
             <span id="selfAPIKey"></span>
             <button id="generateAPIKeyButton" onclick="generateApiKey()">Generate API Key</button>
+            <button id="logoutButton" onclick="window.location.href='/api/auth/logout'">Logout</button>
           </div>
         </section>
         <section id="dashboardAdmin">
