--- a/viewer/viewer.html
+++ b/viewer/viewer.html
@@ -132,7 +132,7 @@
             <button id="loginButton" onclick="window.location.href='/api/auth/login'">Login</button>
           </div>
           <div class="connectedLayout">
-            <h2>Welcome, <span id="username">User</span>!</h2>
+            <h2>Welcome, <span id="usernameUser">User</span>!</h2>
             <h3>Your API Key:</h3>
             <span id="selfAPIKey"></span>
             <button id="generateAPIKeyButton" onclick="generateApiKey()">Generate API Key</button>
@@ -140,7 +140,8 @@
           </div>
         </section>
         <section id="dashboardAdmin">
-          <h2>Dashboard</h2>
+          <h2>Welcome, <span id="usernameAdmin">User</span>!</h2>
+          <button id="logoutButton" onclick="window.location.href='/api/auth/logout'">Logout</button>
           <div class="container">
             <div class="subContainer" id="dashboardData">
               <h3>Number of API keys: <span id="apiKeyCount">0</span></h3>
