--- a/viewer/viewer.html
+++ b/viewer/viewer.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="referrer" content="origin" />
     <title>Ramp Agent API</title>
     <meta name="mobile-web-app-capable" content="yes" />
 
