Updated button paths

--- a/viewer/viewer.html
+++ b/viewer/viewer.html
@@ -130,19 +130,19 @@
       <section data-page="dashboard">
         <section id="dashboardUser">
           <div class="loginLayout">
-            <button id="loginButton" onclick="window.location.href='/api/auth/login'">Login</button>
+            <button id="loginButton" onclick="window.location.href='/rampagent/api/auth/login'">Login</button>
           </div>
           <div class="connectedLayout">
             <h2>Welcome, <span id="usernameUser">User</span>!</h2>
             <h3>Your API Key:</h3>
             <span id="selfAPIKey"></span>
             <button id="generateAPIKeyButton" onclick="generateApiKey()">Generate API Key</button>
-            <button id="logoutButton" onclick="window.location.href='/api/auth/logout'">Logout</button>
+            <button id="logoutButton" onclick="window.location.href='/rampagent/api/auth/logout'">Logout</button>
           </div>
         </section>
         <section id="dashboardAdmin">
           <h2>Welcome, <span id="usernameAdmin">User</span>!</h2>
-          <button id="logoutButton" onclick="window.location.href='/api/auth/logout'">Logout</button>
+          <button id="logoutButton" onclick="window.location.href='/rampagent/api/auth/logout'">Logout</button>
           <div class="container">
             <div class="subContainer" id="dashboardData">
               <h3>Number of API keys: <span id="apiKeyCount">0</span></h3>
