--- a/viewer/viewer.html
+++ b/viewer/viewer.html
@@ -133,7 +133,7 @@
             <button id="loginButton" onclick="window.location.href='/rampagent/api/auth/login'">Login</button>
           </div>
           <div class="connectedLayout">
-            <h2>Welcome, <span id="usernameUser">User</span>!</h2>
+            <h2>Welcome back, <span id="usernameUser">User</span>!</h2>
             <h3>Your API Key:</h3>
             <span id="selfAPIKey"></span>
             <button id="generateAPIKeyButton" onclick="generateApiKey()">Generate API Key</button>
@@ -141,7 +141,7 @@
           </div>
         </section>
         <section id="dashboardAdmin">
-          <h2>Welcome, <span id="usernameAdmin">User</span>!</h2>
+          <h2>Welcome back, <span id="usernameAdmin">User</span>!</h2>
           <button id="logoutButton" onclick="window.location.href='/rampagent/api/auth/logout'">Logout</button>
           <div class="container">
             <div class="subContainer" id="dashboardData">
