Fixed log/configs user verification

--- a/viewer/viewer.html
+++ b/viewer/viewer.html
@@ -133,7 +133,7 @@
             <button id="loginButton" onclick="window.location.href='/rampagent/api/auth/login'">Login</button>
           </div>
           <div class="connectedLayout">
-            <h2>Welcome back, <span id="usernameUser">User</span>!</h2>
+            <h2>Welcome back, <span id="username">User</span>!</h2>
             <h3>Your API Key:</h3>
             <span id="selfAPIKey"></span>
             <button id="generateAPIKeyButton" onclick="generateApiKey()">Generate API Key</button>
